--- a/templates/articles/article_search.html
+++ b/templates/articles/article_search.html
@@ -2,46 +2,18 @@
     <div class="currentApp">
        <div class="btn-group">
            <a class="filterItem" href="#" data-toggle="dropdown" >
-            {{active_app.label}}
+            ioGrow Blog
             <i class="icon-angle-down"></i>
            </a>
-           <ul class="dropdown-menu">
-            {%for application in apps %}
-
-                  <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal">{{application.label}}</a></li>
-
-            {%endfor%}
-           </ul>
         </div>
     </div>
     <div class=" subHeaderContent">
-      <div class="col-md-12">
+      <div class="col-md-9">
       <div class="row">
-      <div class="col-md-10 col-xs-12 filter-content">
-      <div class="filterOptions">
-          <span role="button" class="filterItem" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Leads</span> </span>
-          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Leads</span></span>
-          <div class="btn-group">
-              <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" >
-                Sort by
-                <i class="icon-angle-down"></i>
-              </a>
-              <ul class="dropdown-menu">
-            <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a></li>
-            <li><a ng-click="orderBy('firstname')" href="#" data-toggle="modal">{{ _('First Name') }}</a></li>
-            <li><a ng-click="orderBy('lastname')" href="#" data-toggle="modal">{{ _('Last Name') }}</a></li>
-            <!--li><a ng-click="orderBy('title')" href="#" data-toggle="modal">{{ _('Title') }}</a></li-->
-            <!--li><a ng-click="orderBy('company')" href="#" data-toggle="modal">{{ _('Company') }}</a></li-->
-            <li><a ng-click="orderBy('status')" href="#" data-toggle="modal">{{ _('Status') }}</a></li>
-              </ul>
-        </div>
-        </div>
+      <div class="col-md-10 col-xs-10">
+
       </div>
-      <div class="col-md-2 col-xs-2">
-      <a href="/#/leads/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
-           New <span class="hidden-xs hiddenOnxs">Lead</span>
-         </a>
-      </div>
+
       </div>
     </div>
     </div>
@@ -62,6 +34,7 @@
 
       <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
       <!-- BEGIN PAGE CONTAINER-->
+
   <div class="" ng-show="immediateFailed">
     <div class="col-md-12">
 
@@ -70,82 +43,56 @@
         </span>
     </div>
   </div>
-  <div ng-show="isSignedIn" class="listContainer">
+  <div class="listContainer">
 
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
     <div class="row ">
 
     <div class="col-md-12">
-    <div class="row subHeaderContainer">
-        <div class=" col-md-9 col-sm-9 col-xs-9 subHeaderContent">
-           <div class="row">
-              <h2 class="page-title">{{ _("Leads") }} </h2>
-           </div>
-        </div>
-     <div class="col-md-3 col-sm-3 col-xs-3">
-        <div class="row">
-         <div class="pull-right" >
-           <a href="/#/leads/new" class="btn red newBtn">
-                       {{ _(" New Lead") }}
-          </a>
-        </div>
-         </div>
-    </div>
-  </div>
+
   <div class="row">
   <div class="col-md-12">
     <div class="row ">
     <div class="tab-pane">
     <div class="row ">
-      <div class="col-md-12 waterfall" ng-hide="blankStatelead">
-        <div ng-repeat="lead in leads" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false">
+      <div class="col-md-12" ng-hide="blankStateArticle">
+        <div ng-repeat="article in articles" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(article,$index)">
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
                 <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name">
-                <img ng-hide="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="/static/img/avatar_contact.jpg" >
-                <img  ng-show="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="<%=lead.profile_img_url%>">
+                <img ng-hide="article.author_photo" alt="<%= article.author %> " class="img-responsive profile-photo" src="/static/img/avatar_contact.jpg" >
+                <img  ng-show="article.author_photo" alt="<%= article.author %> " class="img-responsive profile-photo" src="<%=article.author_photo%>">
                 </a>
               </div>
               <div class="text">
-                <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>
                 <div class="name">
-                  <a href="/#/leads/show/<%= lead.id %>" class="profile-link">
-                    <%= lead.firstname %> <%= lead.lastname %>
+                  <a href="/blog/articles/<%= article.id %>" class="profile-link">
+                    <%= article.title %>
                   </a>
                 </div>
                 <div class="pitch">
-                  <span>
-                      <%=fromNow(lead.updated_at)%>
+                  <span ng-show="article.intro_text" class="contact-title" >
+                    posted by <%=article.author%>
+                    <%=fromNow(article.created_at)%>
+
                   </span>
-                  <span ng-show="lead.status" class="contact-title" >
-                    Status:
-                    <a class="desc" href="/#/search/type:Lead <%=lead.status%>">
-                      #<%=lead.status %>
-                    </a>
+                  <br>
+                  <span ng-bind-html-unsafe="article.intro_text">
+
                   </span>
-                  <span ng-show="lead.title">
-                    <a  class="desc" href="/#/search/type:Lead <%=lead.title%>">
-                      #<%=lead.title%>
-                    </a>
-                  </span>
-                  <span ng-show="lead.company">
-                    <span ng-show="lead.title" class="contact-title">
-                      at
-                    </span>
-                    <a class="desc" href="/#/search/type:Lead <%=lead.company%>">
-                      #<%=lead.company%>
-                    </a>
-                  </span>
+
+
+
                 </div>
               </div>
               <div class="clearfix"></div>
             </div>
           </div>
-          <div class="tagsSection" ng-class="{hidden: lead.tags==null}">
+          <div class="blogTagsSection" ng-class="{hidden: article.tags==null}">
             <div class="sectionContent">
-              <a ng-repeat="tag in lead.tags" href="/#/search/type:Lead tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+              <a ng-repeat="tag in article.tags" href="/#/search/type:Article tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
               </a>
             </div>
           </div>
@@ -153,7 +100,7 @@
         <div class="clearfix"></div>
       </div><!--/inner-cards-container-->
       <!--$Blank state-->
-      <div class="col-md-12 " ng-show="blankStatelead">
+      <div class="col-md-12 " ng-show="blankStateArticle">
         <div  data-span="all" class="dashboard-stat cards" data-tablet="span6" data-desktop="span12">
           <div class="">
             <div class="blank_slate_arrow"></div>
@@ -207,12 +154,15 @@
               <button ng-click="deleteTag(tag_item)" class="close_tag close pull-right" ng-show="manage_tags"></button>
             </div>
           </li>
+          {% if is_admin %}
           <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTag=true">
             <a ng-click="" class="btn-link addAnotherPhone">
               <i class="fa fa-tags"></i>  Add a new label
             </a>
           </li>
+          {% endif %}
         </ul>
+        {% if is_admin %}
         <form class="well newTagForm" role="form" ng-show="showNewTag">
           <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
           <div class="row">
@@ -236,6 +186,7 @@
           <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">        Manage Tags
           </button>
         </div>
+        {% endif %}
       </div>
     </div>
   </div>
@@ -245,7 +196,6 @@
 </div>
 </div>
 <div class="fixed-labelsCard visible-md visible-lg">
-  
   <div class="row">
   <div class="col-md-12">
     <div class="portlet showCard fixedCard">
@@ -271,12 +221,15 @@
               <button ng-click="deleteTag(tag_item)" class="close_tag close pull-right" ng-show="manage_tags"></button>
             </div>
           </li>
+          {% if is_admin %}
           <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTag=true">
             <a ng-click="" class="btn-link addAnotherPhone">
               <i class="fa fa-tags"></i>  Add a new label
             </a>
           </li>
+          {% endif %}
         </ul>
+        {% if is_admin %}
         <form class="well newTagForm" role="form" ng-show="showNewTag">
           <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
           <div class="row">
@@ -300,33 +253,12 @@
           <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">        Manage Tags
           </button>
         </div>
+        {% endif %}
       </div>
     </div>
   </div>
   </div>
 </div>
-<div id="BeforedeleteLead" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" 
-              aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                  <h3 id="myModalLabel" class="modal-title">Delete Lead</h3>
-              </div>
-              <div class="modal-body">
-                 <form id="seletesho" name="deletesho" class="form-horizontal">
-                  <p>{{_("Are you sure you want to delete")}} :  <%= selectedLead.firstname %> <%= selectedLead.lastname %> .</p>
-              </div>
-              <div class="modal-footer">
-                <button class="btn" ng-click="selectedLead={}" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-
-                <input ng-click="deletelead()" type="submit" class="btn red" value="Delete this Lead">
-                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
-              </div>
-               </form>
-               </div>
-          </div>
-       </div>
 <script type="text/javascript">
   $("#select2_sample2").select2({
         placeholder: "Click to Select a label",
@@ -348,10 +280,10 @@
     }
     handleUniform();
 
-    $('.waterfall').waterfall({
-        colMinWidth: 200,
-        defaultContainerWidth: 800,
-        autoresize: true
-      });
+    // $('.waterfall').waterfall({
+    //     colMinWidth: 300,
+    //     defaultContainerWidth: 800,
+    //     autoresize: true
+    //   });
 $('.textfill').textfill({debug: true, maxFontPixels: 16});
 </script>
