--- a/templates/base.html
+++ b/templates/base.html
@@ -37,18 +37,19 @@
     <link href="/static/bootstrap3/plugins/select2/select2_metro.css" rel="stylesheet" type="text/css"/>
   <!-- END PAGE LEVEL PLUGIN STYLES -->
   <!-- BEGIN THEME STYLES -->
-  <link href="/static/bootstrap3/css/style-metronic.css" rel="stylesheet" type="text/css"/>
-  <link href="/static/bootstrap3/css/style.css" rel="stylesheet" type="text/css"/>
-  <link href="/static/bootstrap3/css/style-responsive.css" rel="stylesheet" type="text/css"/>
-  <link href="/static/bootstrap3/css/plugins.css" rel="stylesheet" type="text/css"/>
-  <link href="/static/bootstrap3/css/pages/tasks.css" rel="stylesheet" type="text/css"/>
-  <link href="/static/bootstrap3/css/themes/light.css" rel="stylesheet" type="text/css" id="style_color"/>
-   <link rel="stylesheet" href="/static/plugins/ngQuickDate/ng-quick-date.css"/>
-   <link rel="stylesheet" href="/static/plugins/ngQuickDate/ng-quick-date-default-theme.css"/>
-   <link rel="stylesheet" href="/static/css/datetimepicker.css"/>
-   <link href="/static/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css"/>
-  <link href="/static/bootstrap3/css/custom.css" rel="stylesheet" type="text/css"/>
-  <link href="/static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/style-metronic.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/style.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/style-responsive.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/plugins.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/pages/tasks.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/themes/light.css" rel="stylesheet" type="text/css" id="style_color"/>
+   <link rel="stylesheet" href="static/plugins/ngQuickDate/ng-quick-date.css"/>
+   <link rel="stylesheet" href="static/plugins/ngQuickDate/ng-quick-date-default-theme.css"/>
+   <link rel="stylesheet" href="static/css/datetimepicker.css"/>
+   <link href="static/plugins/date-time-picker/datetimepicker.css" rel="stylesheet" type="text/css"/>
+   <link href="static/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/custom.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
 
   <!-- END THEME STYLES -->
 
@@ -101,8 +102,7 @@
 
         <ul class="nav navbar-nav pull-right">
 
-
-              <li class="dropdown user chrome-ext">
+              <li class="dropdown user chrome-ext hidden-xs">
 	                <input type="submit" onclick="$('#InstallChromeExtension').modal() " class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
               </li>
 
@@ -113,7 +113,7 @@
                   </span>
                 </a>
               </li>
-              <li class="dropdown user app-menu" id="header_task_bar">
+              <li class="dropdown user app-menu hidden-xs" id="header_task_bar">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true" >
                 <img alt="" src="/static/bootstrap3/img/glyphicons_156_show_thumbnails.png" width="18">
                   <span class="username">
@@ -537,9 +537,9 @@
 <script src="/static/app/scripts/vendor/app.js"></script>
   <script src="/static/plugins/fullcalendar/fullcalendar.min.js"></script>
   <script src="/static/plugins/fullcalendar/fullcalendar/lang/all.js"></script>
-
-  <script src="/static/plugins/fullcalendar/fullcalendar/gcal.js"></script>
-  <script src="/static/app/scripts/vendor/calendar.js"></script>
+  <script src="static/plugins/fullcalendar/fullcalendar/gcal.js"></script>
+  <script src="static/app/scripts/vendor/calendar.js"></script>
+ <script src="static/plugins/date-time-picker/datetimepicker.js"></script>
 
 
 
