Change the titlle creating now to create
Former-commit-id: a57fae41a96b1e3d6a218b0eea304458a02a9a0b [formerly 516a8db2bb4d2b42125bbb6026bdf81fd13545ef] [formerly c1cf3a20922fc2ae8d17f346422230384296035b [formerly 59e3d196bec3941bfe66541864e3f279d85e5323]]
Former-commit-id: 6780f4b89f7adc9343488b2c02c09c0a2fd7b8f6 [formerly ff639f443dde6cd02c251b9251377009904f444c]
Former-commit-id: 88d79ca01019f00aafffcfb72217982eb0c30866

--- a/templates/cases/case_new.html
+++ b/templates/cases/case_new.html
@@ -38,7 +38,7 @@
    <div class="col-md-9">
       <div class="row">
           <div class="showPage col-md-12 newActionsBtn">
-          <span>Creating now Case </span>
+          <span>Create Case </span>
           <button class="btn red newAccountBtn pull-right" ng-click="save(casee)">Create</button>
           <div class="clearfix"></div>
         </div>
