--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -53,7 +53,7 @@
   <div class="col-md-9">
     <div class="row">
         <div class="showPage col-md-12 newActionsBtn">
-          <span>Creating now Account </span>
+          <span>Create Account </span>
           <button class="btn red newAccountBtn pull-right" ng-click="save(account)">Create</button>
           <div class="clearfix"></div>
         </div>
