--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -43,7 +43,7 @@
   <div class="col-md-9">
     <div class="row">
     <div class="showPage col-md-12 newActionsBtn">
-          <span>Creating now Contact </span>
+          <span>Create Contact </span>
           <button class="btn red newAccountBtn pull-right" ng-click="save(contact)">Create</button>
           <div class="clearfix"></div>
         </div>
