--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -52,7 +52,7 @@
       <div class="col-md-9">
       <div class="row">
           <div class="showPage col-md-12 newActionsBtn">
-          <span>Creating now Opportunity </span>
+          <span>Create Opportunity </span>
           <button class="btn red newAccountBtn pull-right" ng-click="save(opportunity)">Create</button>
           <div class="clearfix"></div>
         </div>
