changing date-time picker on add event form on leads.show page the new plugin
Former-commit-id: fb32111fe9fad62170dc7480d1147ab9cc76fc56 [formerly 69feb5d4a445b233d4411a558d78d14f216be91f] [formerly 9926f2278b85056ebb38ea48953cbf5317d41c62 [formerly 25ab2d6b2d49812470358a82d3e64993d5518f7a]]
Former-commit-id: b660a1fc03960216807ff5f0277f860418113d34 [formerly 70ca4de09b34f54e8cfda36190c0ede2467e19b3]
Former-commit-id: c2aeba3e703cddf2eca954ac3b536e473a17c2c6

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -686,35 +686,36 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12 margin-bottom-10">
-                                          <div class="dropdown">
-                                            <a class="dropdown-toggle" id="EventStartsAtSelector" role="button" data-toggle="dropdown" data-target="#" href="#">
-                                              <div class="input-group">
-                                                  <span class="input-group-addon">
-                                                    <i class="glyphicon glyphicon-calendar"></i>
-                                                  </span>
-                                                  <input type="text" placeholder="From" class="form-control" data-ng-model="ioevent.starts_at">
-                                              </div>
-                                            </a>
-                                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                              <datetimepicker data-ng-model="ioevent.starts_at" data-datetimepicker-config="{ dropdownSelector: '#EventStartsAtSelector' }"/>
-                                            </ul>
+                                          <div class="input-icon margin-top-10">
+                                            <i class="fa fa-calendar"></i>
+                                            <input type="text" class="form-control" placeholder="From" value="" id="leadEventStartsAt">
+                                            <script type="text/javascript">
+                                              $(function(){
+                                                $('#leadEventStartsAt').appendDtpicker({
+                                                  "closeOnSelected": true,
+                                                  "dateFormat": "YYYY-MM-DD h:m",
+                                                  "autodateOnStart": false
+                                                });
+                                              });
+                                            </script>
                                           </div>
+                                          
                                     </div>
                                 </div>   
                                 <div class="row">
                                     <div class="col-md-12 margin-bottom-10">
-                                          <div class="dropdown">
-                                            <a class="dropdown-toggle" id="EventEndsAtSelector" role="button" data-toggle="dropdown" data-target="#" href="#">
-                                              <div class="input-group">
-                                                  <span class="input-group-addon">
-                                                    <i class="glyphicon glyphicon-calendar"></i>
-                                                  </span>
-                                                  <input type="text" placeholder="To" class="form-control" data-ng-model="ioevent.ends_at">
-                                              </div>
-                                            </a>
-                                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                              <datetimepicker data-ng-model="ioevent.ends_at" data-datetimepicker-config="{ dropdownSelector: '#EventEndsAtSelector' }"/>
-                                            </ul>
+                                           <div class="input-icon margin-top-10">
+                                            <i class="fa fa-calendar"></i>
+                                            <input type="text" class="form-control"  placeholder="To" name="date9" value="" id="leadEventEndsAt">
+                                            <script type="text/javascript">
+                                              $(function(){
+                                                $('#leadEventEndsAt').appendDtpicker({
+                                                  "closeOnSelected": true,
+                                                  "dateFormat": "YYYY-MM-DD h:m",
+                                                  "autodateOnStart": false
+                                                });
+                                              });
+                                            </script>
                                           </div>
                                     </div>
                                 </div>  
