--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
    <link rel="stylesheet" href="static/plugins/ngQuickDate/ng-quick-date.css"/>
    <link rel="stylesheet" href="static/plugins/ngQuickDate/ng-quick-date-default-theme.css"/>
    <link rel="stylesheet" href="static/css/datetimepicker.css"/>
-   <link href="static/plugins/date-time-picker/datetimepicker.css" rel="stylesheet" type="text/css"/>
+   <link href="static/plugins/date-time-picker/jquery.simple-dtpicker.css" rel="stylesheet" type="text/css"/>
    <link href="static/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/custom.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
@@ -539,7 +539,7 @@
 
   <script src="static/plugins/fullcalendar/fullcalendar/gcal.js"></script>
   <script src="static/app/scripts/vendor/calendar.js"></script>
- <script src="static/plugins/date-time-picker/datetimepicker.js"></script>
+ <script src="static/plugins/date-time-picker/jquery.simple-dtpicker.js"></script>
 
 
 <script>
