test.css, contactcontroller
Former-commit-id: 1d3a75935146685202e45fa81a5a856ec42e6b18 [formerly 8d1d4c23c899fd18bb3aceae7e8f7690c64d529c] [formerly a330323b3004a52e518155fb1c535f71a59985b9 [formerly ff9429e19ed61c3f975e3970e4656ac1803ed233]]
Former-commit-id: b9b1b8b9e363df6c78ca93d5f8bcc2a1ec0e18e8 [formerly 3ca08e5cc57ca8eb4770c4ca31872212b9c42d3f]
Former-commit-id: 48644cdc2690eb0ba5175f5a9fef05dbb03bcb6a

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -257,7 +257,7 @@
         <ul class="list-group tags-list">
           <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
             <div class="row">
-              <span ng-drag="dragTag(tag_item)"  draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;">
+              <span ng-drag="dragTag(tag_item)" id="iii"  draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;">
                   <%= tag_item.name %>
               </span>
               <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
