before pull from iogrow
Former-commit-id: 317b5297a92aa89508419c58036f56a23c04b58c [formerly db20b163ae1443144a79953044601f3d64acea97] [formerly b5e19bea447776901d5a4a6b7337e11257dace41 [formerly 6ba2328cba5d80b27bbc16241e39da1dd389b282]]
Former-commit-id: 8b5f74bd4f448d8efb6a1dc777ef943305f3d1f5 [formerly 471d6e71c14bacf7b8efec842d7d789cc4924f8c]
Former-commit-id: f711f6ceef2621663ac17509efde1d081d07a756

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -89,7 +89,7 @@
                         </a>
                       </span>
                     </li>
-                    <li ng-show="contact.account.name">
+                    <li ng-show="contact.Paccount.name">
                       <span>
                         Company:
                         <a class="tag ng-binding" href="/#/search/type:Contact  #<%= contact.account.name %>">
@@ -894,12 +894,37 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12 margin-bottom-10">
-                                          <datetimepick ng-model='ioevent.starts_at' placeholder="From" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                                          <div class="input-icon margin-top-10">
+                                            <i class="fa fa-calendar"></i>
+                                            <input type="text" class="form-control" placeholder="From" value="" id="leadEventStartsAt">
+                                            <script type="text/javascript">
+                                              $(function(){
+                                                $('#leadEventStartsAt').appendDtpicker({
+                                                  "closeOnSelected": true,
+                                                  "dateFormat": "YYYY-MM-DD h:m",
+                                                  "autodateOnStart": false
+                                                });
+                                              });
+                                            </script>
+                                          </div>
+                                          
                                     </div>
                                 </div>   
                                 <div class="row">
                                     <div class="col-md-12 margin-bottom-10">
-                                          <datetimepick ng-model='ioevent.ends_at' placeholder="To" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                                           <div class="input-icon margin-top-10">
+                                            <i class="fa fa-calendar"></i>
+                                            <input type="text" class="form-control"  placeholder="To" name="date9" value="" id="leadEventEndsAt">
+                                            <script type="text/javascript">
+                                              $(function(){
+                                                $('#leadEventEndsAt').appendDtpicker({
+                                                  "closeOnSelected": true,
+                                                  "dateFormat": "YYYY-MM-DD h:m",
+                                                  "autodateOnStart": false
+                                                });
+                                              });
+                                            </script>
+                                          </div>
                                     </div>
                                 </div>  
                                 <div class="row">
