fixing new event form design bugs and generalising the new event form on all objects
Former-commit-id: b75602bb54b75e9b2224c6381ac768c4e69d10d9 [formerly cc771fe27f355339da3d7ebe30b5b6439c8ebd24] [formerly a07cf909aeb880ccd4e8dcc4387c0c5097dcfd7f [formerly e3ed75a50fe48d43d008b576ee6cc71ba96de41f]]
Former-commit-id: 18a2dd2edf7fa0057886d0f57e7df1a0432fb839 [formerly 624caeb7516cbb5bef611572e5dbdc971bd9a114]
Former-commit-id: 3364f9b76dd4d652b1eb10ff72b836beb6fc7809

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -890,37 +890,65 @@
             <!-- $ Events -->
             <div class="row">
                 <div class="col-md-12">
-                    <div class="portlet showCard">
-                        <div class="portlet-title line">
-                            <div class="caption">
-                                <i class="fa fa-calendar"></i>Events
-                            </div>
-                        </div>
-                        <div class="portlet-body" id="chats">
-                            <div class="scroller" style="height:200x" data-always-visible="1" data-rail-visible="0">
-                                <div id="newTask">
-                                    <ul id="tasks" class="list-unstyled">
-                                        <li ng-repeat="event in events" id="event_<%=$index%>">
-                                            <input value="check1" type="checkbox">
-                                            <span>
-                                                <a href="/#/events/show/<%=event.id%>" class="discussion-content">
-                                                    <%= event.title%>
-                                                    <span ng-show="event.starts_at">
-                                                        [<%= event.starts_at | date:'yyyy-MM-dd '%>]
-                                                    </span>
-                                                </a>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#newEventModal" class="btn-link addAnotherPhone" data-toggle="modal">
-                                                {{_("Add a new event")}}
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                          <div class="portlet showPage rightCardContent">
+                    <div class="portlet-title line">
+                      <div class="caption"> <i class="fa fa-calendar"></i>Events </div>
+
                     </div>
+                    <div class="newContactform portlet-body" id="chats">
+                      <form class=" slimForm ng-pristine ng-invalid ng-invalid-required">
+                          <div class="formElements newEventToLead" ng-show="newEventform">
+                                    <div class="row">
+                                      <div class="col-md-12 margin-bottom-10">
+                                          <input ng-model="ioevent.title" type="text" id="taskName" class="form-control" placeholder="Event tilte">
+                                      </div>
+                                      <!--/span-->
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12 margin-bottom-10">
+                                              <div class="input-icon margin-top-10">
+                                                <i class="fa fa-calendar"></i>
+                                                <input type="text" class="form-control" placeholder="From" value="" id="accountEventStartsAt">
+                                              </div>
+                                              
+                                        </div>
+                                    </div>   
+                                    <div class="row">
+                                        <div class="col-md-12 margin-bottom-10">
+                                               <div class="input-icon margin-top-10">
+                                                <i class="fa fa-calendar"></i>
+                                                <input type="text" class="form-control"  placeholder="To" name="date9" value="" id="accountEventEndsAt">
+                                              </div>
+                                        </div>
+                                    </div>  
+                                    <div class="row">
+                                      <div class="col-md-12 margin-bottom-10">
+                                          <input ng-model="ioevent.where" type="text" id="taskName" class="form-control" placeholder="Where ?">
+                                      </div>
+                                      <!--/span-->
+                                    </div> 
+                          </div>
+                          <div class="row">
+                              <div class="col-md-12 margin-top-10">
+                                  <p><span ng-hide="newEventform">Add New Event</span><button type="button" ng-click="addEvent(ioevent)" class="btn red btn-sm pull-right btn-inline">Add</button></p>
+                              </div>
+                          </div>
+                      </form>
+                       <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
+                          <li ng-repeat="event in events" id="event_<%=$index%>">
+                            <input value="check1" type="checkbox">
+                            <span>
+                              <a href="/#/events/show/<%=event.id%>" class="discussion-content">
+                                <%= event.title%>
+                                <span ng-show="event.starts_at">
+                                  [<%= event.starts_at | date:'yyyy-MM-dd '%>]
+                                </span>
+                              </a>
+                            </span>
+                          </li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
@@ -1749,7 +1777,24 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <script type="text/javascript">
+                              $(function(){
+                                $('#accountEventStartsAt').appendDtpicker({
+                                  "closeOnSelected": true,
+                                  "dateFormat": "YYYY-MM-DD h:m",
+                                  "autodateOnStart": false
+                                });
+                              });
+                            </script>
+                            <script type="text/javascript">
+                              $(function(){
+                                $('#accountEventEndsAt').appendDtpicker({
+                                  "closeOnSelected": true,
+                                  "dateFormat": "YYYY-MM-DD h:m",
+                                  "autodateOnStart": false
+                                });
+                              });
+                            </script>
                             <script type="text/javascript">
                                 $(function() {
                                     $('#datetimepicker2').datetimepicker({
