delete okokokok from lead_new page
Former-commit-id: 07e5a23338920b60713a9ee3f9488c7861fbd458 [formerly 757f469c3e475ec03e0743af4302fc92c9d2199d] [formerly 63d577f8ee4dfc18cdf97bf6505872fb6dd0a2fc [formerly 3c4d40cf66ff55d75741303e913ab0065c073d29]]
Former-commit-id: 6dbc05023588100dd642210bdd3eee2ecc8dbc1d [formerly aba1e0f4234c6a44bd70603aef99a34514b165ae]
Former-commit-id: f73c9a87ac10e4e5060e64a89080d26832b52453

--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -129,7 +129,7 @@
 
                     </div>
                   </div>
-                
+
                   <br>
                 </div>
                 <div class="news-block-tags">
@@ -371,7 +371,7 @@
               </label>
               <label class="radio line">
                 <input type="radio"  value="private" ng-model="lead.access" />
-                private: only you and your collaborators ookokokok
+                private: only you and your collaborators
               </label>
             </div>
           </div>
