add address state on account
Former-commit-id: 3c0c887c83a1599ea23243ad10535b47f706983f [formerly ff02d011c43eacf959b18c1ffd670e981df69b6a] [formerly b972183aaabf3533798f629d667170348f1960b1 [formerly 18ec01687998a8300ddf4ca1d28567dfc4f6b6a2]]
Former-commit-id: 1e0d8e1128d0a556d8e7b817e3d39d9f74fe9930 [formerly a5a3082b174d0e435688a844b02893cb180b778c]
Former-commit-id: 72203b3ef0e15130d2c81323c2b0f2601cd14e8f

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -1082,7 +1082,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-                    <button  type="submit" class="btn btn-primary addContactNow">{{_("Save")}} </button>
+                    <button  type="submit" class="btn btn-primary addContactNow" data-dismiss="modal" aria-hidden="true">{{_("Save")}} </button>
                 </div>
                 </form>
             </div>
