--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -115,10 +115,6 @@
                                                 <div class="row ">
                                                     <form class="form-inline newLeadForm" role="form">
                                                         <div class="form-group sm-group" style="">
-                                                            <label class="sr-only" for="exampleInputEmail2">Number</label>
-                                                            <input type="text" class="form-control" id="exampleInputEmail2" ng-model="phone.number" placeholder="Enter a number">
-                                                        </div>
-                                                        <div class="form-group sm-group" style="">
                                                             <label class="sr-only" for="exampleInputPassword2">Type</label>
                                                             <select ng-model="phone.type" class="form-control">
                                                                 <option value="home" selected="selected" >{{_('home')}}</option>
@@ -126,6 +122,19 @@
                                                                 <option>{{_('mobile')}}</option>
                                                                 <option>{{_('other')}}</option>
                                                             </select>
+                                                        </div>
+                                                        <div class="form-group sm-group" style="">
+                                                            <label class="sr-only" for="exampleInputEmail2">Number</label>
+                                                             <input 
+                                                                  name="phonenumber" 
+                                                                  type="text"  
+                                                                  class="form-control" 
+                                                                  id="exampleInputEmail2" 
+                                                                  ng-model="phone.number" 
+                                                                  placeholder="Enter a number" 
+                                                                  required 
+                                                                  ng-pattern="/^(?:(?:\(?(?:00|\+)([1-4]\d\d|[1-9]\d?)\)?)?[\-\.\ \\\/]?)?((?:\(?\d{1,}\)?[\-\.\ \\\/]?){0,})(?:[\-\.\ \\\/]?(?:#|ext\.?|extension|x)[\-\.\ \\\/]?(\d+))?$/i"
+                                                                  ng-focus="isFocused = true">
                                                         </div>
                                                         <button type="submit" ng-click="pushElement(phone, phones, 'phones')" class="btn blue jfk-button jfk-button-action">Add</button>
                                                         <button type="submit" class="btn btn-default" ng-click="showPhoneForm = false">X</button>
@@ -159,7 +168,7 @@
                                                     <form class="form-inline newLeadForm" role="form">
                                                         <div class="form-group lg-group" style="">
                                                             <label class="sr-only" for="exampleInputEmail2">Email</label>
-                                                            <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter a number">
+                                                            <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter a number" required>
                                                         </div>
                                                         <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')" >Add</button>
                                                         <button type="submit" ng-click="showEmailForm = false" class="btn btn-default">X</button>
@@ -213,7 +222,7 @@
                                                     <form class="form-inline newLeadForm" role="form">
                                                         <div class="form-group lg-group" style="">
                                                             <label class="sr-only" for="exampleInputEmail2">Website</label>
-                                                            <input type="text" ng-model="website.url" class="form-control" id="exampleInputEmail2" placeholder="Enter a Website">
+                                                            <input type="url" ng-model="website.url" class="form-control" id="exampleInputEmail2" placeholder="Enter a Website" required>
                                                         </div>
                                                         <button type="submit" ng-click="pushElement(website, websites, 'websites')" class="btn blue jfk-button jfk-button-action">Add</button>
                                                         <button type="submit" ng-click="showWebsiteForm = false" class="btn btn-default">X</button>
@@ -240,7 +249,7 @@
                                                     <form class="form-inline newLeadForm" role="form">
                                                         <div class="form-group lg-group" style="">
                                                             <label class="sr-only" for="exampleInputEmail2">Social link</label>
-                                                            <input type="text" class="form-control" id="exampleInputEmail2" ng-model='sociallink.url' placeholder="Enter a social link">
+                                                            <input type="url" class="form-control" id="exampleInputEmail2" ng-model='sociallink.url' placeholder="Enter a social link" required>
                                                         </div>
                                                         <button ng-click="pushElement(sociallink, sociallinks, 'sociallinks')" type="submit" class="btn blue jfk-button jfk-button-action">Add</button>
                                                         <button type="submit" ng-click="showSociallinkForm = false" class="btn btn-default">X</button>
@@ -405,7 +414,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-                <input  type="submit" ng-click="pushElement(address, addresses, 'addresses')" class="btn green" value="Add this address">
+                <input  type="submit" ng-disabled="!address.country" ng-click="pushElement(address, addresses, 'addresses')" class="btn green" value="Add this address">
             </div>
         </div>
     </div>
