--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -282,7 +282,7 @@
                                                             <form class="form-inline newLeadForm" role="form">
                                                                 <div class="form-group lg-group" style="">
                                                                     <label class="sr-only" for="exampleInputEmail2">Email</label>
-                                                                    <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter an email">
+                                                                    <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter an email" required>
                                                                 </div>
                                                                 <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addEmail(email)" >Add</button>
                                                                 <button type="submit" ng-click="showEmailForm = false" class="btn btn-default">X</button>
@@ -1219,7 +1219,7 @@
                 <div class="modal-footer">
                     <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                    <input ng-hide="isLoading" ng-click="addAddress(address)" ng-disabled="(!address.country || !address.state || !address.city || !address.street)" type="submit" class="btn green" value="{{_('Add this address')}}">
+                    <input ng-hide="isLoading" ng-click="addAddress(address)" ng-disabled="(!address.country)" type="submit" class="btn green" value="{{_('Add this address')}}">
                     <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
                 </div>
                 </form>
