Delete Tasks, on Task list page, fix # 665
Former-commit-id: a46b87b3920dd5dfe8f163fdd914990ba899bd03 [formerly 7646b0e0c438e17e0a77fc98171d01725f0aeefb] [formerly 14a43694a604c8be2dd83cfb2e4d41eacea7bd84 [formerly fb3f367c8cdcb5c9291d21803a05f1a8aea1c7e1]]
Former-commit-id: 8bebd744166f94f2386c7003bfbbd9dbc932c377 [formerly cd0c9bdfb32e2c232bb5027ba2cd773998cc9561]
Former-commit-id: 4c817257f74e0915df3b98f4913adcd95453f3bb

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -372,7 +372,7 @@
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
 
-                <input  ng-click="deleteTask()" type="submit" class="btn red" value="Delete this Event">
+                <input  ng-click="deleteTask()" type="submit" class="btn red" value="Delete this Task">
 
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
