adding directive for datetimepicker and change event.show datetimepicker
Former-commit-id: 4c5ca5801f746d7f9cd6d215045fbfd11b0a1e6e [formerly 7d726a7327dd8eec03d4c374fa4d55e1192dca68] [formerly c60e1cc1d6318b44f290c17e53c25c24d131ca93 [formerly 47c6c5c5524ab1894418394a8ca2e9a9e21ed952]]
Former-commit-id: a1f5f4fdff82496e09a8d332310e904fc483e76b [formerly c519910d3d995ca412476487ce0b31a9345be375]
Former-commit-id: 75133babb127be53efeb7626cf9304c970044ac8

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -718,7 +718,7 @@
                                 <div class="col-md-12 margin-bottom-10">
                                        <div class="input-icon margin-top-10">
                                         <i class="fa fa-calendar"></i>
-                                        <input type="text" class="form-control"  placeholder="To" name="date9" value="" id="leadEventEndsAt">
+                                       <input cusdatetimepicker data-model="ioevent.ends_at" type="text" class="form-control" placeholder="From" value="" id="leadEventStartsAt">
                                       </div>
                                 </div>
                             </div>  
@@ -1599,24 +1599,24 @@
                         </div>
                     </div>
                 </div>
-<script type="text/javascript">
-  $(function(){
-    $('#leadEventStartsAt').appendDtpicker({
-      "closeOnSelected": true,
-      "dateFormat": "YYYY-MM-DD h:m",
-      "autodateOnStart": false
-    });
-  });
-</script>
-<script type="text/javascript">
-  $(function(){
-    $('#leadEventEndsAt').appendDtpicker({
-      "closeOnSelected": true,
-      "dateFormat": "YYYY-MM-DD h:m",
-      "autodateOnStart": false
-    });
-  });
-</script>
+                <script type="text/javascript">
+                  $(function(){
+                    $('#leadEventStartsAt').appendDtpicker({
+                      "closeOnSelected": true,
+                      "dateFormat": "YYYY-MM-DD h:m",
+                      "autodateOnStart": false
+                    });
+                  });
+                </script>
+                <script type="text/javascript">
+                  $(function(){
+                    $('#leadEventEndsAt').appendDtpicker({
+                      "closeOnSelected": true,
+                      "dateFormat": "YYYY-MM-DD h:m",
+                      "autodateOnStart": false
+                    });
+                  });
+                </script>
                 <script type="text/javascript">
                             $(function() {
                             $('#datetimepicker2').datetimepicker({
