--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -108,13 +108,23 @@
                 <strong>Schedule</strong>
               </div>
               <div class="col-md-5 event-schedule">
-                <datetimepick ng-model='event.starts_at'  label-format='EEEE, MMMM d, yyyy'></datetimepick>
+                <span ng-hide="showStartsCalendar" ng-click="showStartsCalendar=true"><i class="fa fa-calendar"></i>
+                <%=event.starts_at | date:'yyyy-MM-dd - HH:mm:ss '%></span>
+                <div ng-show="showStartsCalendar" class="input-icon">
+                     <i class="fa fa-calendar"></i>
+                     <input cusdatetimepicker data-model="event.starts_at" type="text" class="form-control" placeholder="From" value="" id="leadEventStartsAt">
+               </div>
               </div>
               <div class="col-md-2 event-schedule">
                 <i class="fa fa-chevron-right"></i>
               </div>
               <div class="col-md-5 event-schedule">
-              <datetimepick ng-model='event.ends_at'  label-format='EEEE, MMMM d, yyyy'></datetimepick>
+               <span ng-hide="showEndsCalendar" ng-click="showEndsCalendar=true">
+               <i class="fa fa-calendar"></i>  <%=event.ends_at | date:'yyyy-MM-dd - HH:mm:ss '%></span>
+               <div ng-show="showEndsCalendar" class="input-icon">
+                     <i class="fa fa-calendar"></i>
+                     <input cusdatetimepicker data-model="event.ends_at" type="text" class="form-control" placeholder="From" value="" id="leadEventStartsAt">
+               </div>
               </div>
               <div class="clearfix margin-bottom-15"></div>
             </div>
@@ -1016,6 +1026,18 @@
             </div>
             </div>
           </div>
+           <script type="text/javascript">
+                              $(function(){
+                                $('#eventEndsAt').appendDtpicker({
+                                  "closeOnSelected": true,
+                                  "dateFormat": "YYYY-MM-DD h:m",
+                                  "autodateOnStart": false,
+                                   "onHide": function(handler){
+                                      $scope.test=true;
+                                    }
+                                });
+                              });
+          </script>
 
 <script type="text/javascript">
   $(function() {
